# llm-streaming-client

./: README.md  requirements.txt  setup.cfg  setup.py
examples/: config_audio_example.py  config_example.py  server_request_example.py  socket_client_example.py  updated_example.txt  usage.py
src/file_manager_client/: __init__.py  client.py
src/file_manager_client/adapter/: file_adapter.py  http_client.py
src/file_manager_client/config/: __init__.py  config.py
src/llm_streaming_client/: __init__.py  client.py
src/llm_streaming_client/adapter/: __init__.py  config_adapter.py  config_audio_adapter.py  exceptions.py  http_client.py  server_request_adapter.py  socket_client.py
src/llm_streaming_client/config/: config.py
src/llm_streaming_client/dtos/: __init__.py  core_dto.py  dto.py  input.py  output.py  prompt_dto.py  request.py  response.py
src/llm_streaming_client/enums/: action_keys.py  language_keys.py
src/llm_streaming_client/utils/: __init__.py  http_client_utils.py
test/src/file_manager_client/utils/: normalize_path_test.py
test/src/llm-straeming-client/adapter/: config_adapter_test.py  config_audio_adapter_test.py  server_request_adapter_test.py  socket_client_test.py
