[metadata]
name = llm_streaming-client
version = 1.0.0
description = Adapter to interact with the paths of the llm streaming microservice.
author = Alba Marco Ugarte
author_email = amarco@thubantech.com
url = https://github.com/ThubanTechnologies/llm-streaming-client
license = MIT

[options]
packages = find:
install_requires =
    requests

[options.packages.find]
where = src

[options.package_data]
* = *.py, *.txt, *.md

[options.extras_require]
testing = 
    pytest
    pytest-cov

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*